# tseriesconfig-ud

./: .gitignore  Makefile.am  README  configure.ac  hosts  install.yml  install_setup.yml  install_tseries.yml
debian/: changelog  control  files  rules
debian_files/: changelog  control  copyright  rules
etc/: tsDiagrams.def.in  tseries-bookmarks.VNN  tseries-bookmarks.common  tseries.ctl.in  tseries.filter
files/: tseries.desktop
files/etc/: symbols.def  tseries-bookmarks.common  tseries.ctl
files/pixmaps/: ts_active.xpm  ts_find.xpm  ts_new_station.xpm
files/style/: meteogram.style  tsDiagrams.def
group_vars/: all.yml
m4/: metno_versions.m4
share/: metno-tseries.desktop.in
share/pixmaps/: ts_station.xpm
share/style/: accumprecip.style  eps_plum_rr.style  eps_z500.style  fxqgram.style  glameps_ff.style  glameps_rr.style  glameps_z500.style  lameps_t2m.style  lameps_z500.style  maritim.style  meteogram.style  meteogram_ff.style  proff_combi.style  proff_edit.style  style.eps_rr24  style.eps_rr24t2m_noens_op  style.eps_rrt2m  style.eps_t2m  style.lameps_ff  style.lameps_plum_rr  style.lameps_rr  style.marinogram  style.meteogram_batch  style.snow_meteogram  webogram.style
style/: accumprecip.style  eps_plum_rr.style  eps_rr.style  eps_rr24.style  eps_rr24t2m_noens_op.style  eps_rrt2m.style  eps_t2m.style  eps_z500.style  fimex_eps_ff.style  fimex_eps_gust.style  fimex_eps_rr.style  fimex_eps_t2m.style  glameps_ff.style  glameps_rr.style  glameps_t2m.style  glameps_z500.style  havdiagram.style  lameps_ff.style  lameps_plum_rr.style  lameps_rr.style  lameps_t2m.style  lameps_z500.style  marinogram.style  maritim.style  meteogram.style  meteogram_batch.style  meteogram_ff.style  meteogram_humidity.style  proff_combi.style  rrqgram.style  snow_meteogram.style  t2mqgram.style  tsDiagrams.def  webogram.style
