AUTOMAKE_OPTIONS=foreign

ACLOCAL_AMFLAGS = -I m4

etctseriesdir = $(sysconfdir)/tseries/$(PVERSION)
dist_etctseries_DATA = \
	etc/tseries.ctl            \
	etc/symbols.def		   \
	etc/tseries.filter	   \
	etc/tseries-bookmarks.common \
	etc/tseries-bookmarks.VNN


styledir        = $(datarootdir)/tseries/@PVERSION@/style
dist_style_DATA = \
	share/style/tsDiagrams.def\
	share/style/accumprecip.style           \
	share/style/eps_rr24.style		\
	share/style/eps_rr24t2m_noens_op.style	\
	share/style/eps_rr.style		\
	share/style/eps_rrt2m.style		\
	share/style/eps_t2m.style		\
	share/style/eps_z500.style		\
	share/style/fxqgram.style		\
	share/style/glameps_ff.style		\
	share/style/glameps_rr.style		\
	share/style/glameps_t2m.style		\
	share/style/glameps_z500.style		\
	share/style/lameps_ff.style		\
	share/style/lameps_plum_rr.style	\
	share/style/lameps_rr.style		\
	share/style/lameps_t2m.style		\
	share/style/lameps_z500.style		\
	share/style/marinogram.style		\
	share/style/maritim.style		\
	share/style/meteogram_batch.style	\
	share/style/meteogram_ff.style		\
	share/style/meteogram.style		\
	share/style/proff_combi.style		\
	share/style/proff_edit.style		\
	share/style/rrqgram.style		\
	share/style/snow_meteogram.style	\
	share/style/t2mqgram.style		\
	share/style/webogram.style		





